2018-08-29         Arnold D. Robbins     <arnold@skeeve.com>

	* REGRESS: Check for existence of a.out. If not there, run
	make.  Enable core dumps for T.arnold system status test
	to work on MacOS X.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* awktest.tar (testdir/T.expr): Fix test for unary plus.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* REGRESS: Extract tests if necessary, set PATH to include '.'.
	* regdir/beebe.tar (Makefile): Fix longwrds test to prefix
	sort with LC_ALL=C.
	* awktest.tar: Updated from fixed test suite, directory
	it extracts is now called 'testdir' to match what's in top-level
	REGRESS script.
	* regdir: Removed, as Brian wants to keep the test suite in
	the tar file.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* FIXES, lib.c, run.c, makefile, main.c: Merge from Brian's tree.
	* REGRESS: New file, from Brian.
	* awktest.tar: Restored from Brian's tree.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (UPLUS): New token. In the grammar, call op1()
	with it.
	* maketab.c (proc): Add entry for UPLUS.
	* run.c (arith): Handle UPLUS.
	* main.c (version): Updated.
	* bugs-fixed/unary-plus.awk, bugs-fixed/unary-plus.bad,
	bugs-fixed/unary-plus.ok: New files.

2018-08-10         Arnold D. Robbins     <arnold@skeeve.com>

	* TODO: Updated.
	* awk.1: Improve use of macros, add some additional explanation
	in a few places, alphabetize list of variables.

2018-08-08         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (Cell): Add new field `fmt' to track xFMT value used
	for a string conversion.
	[CONVC, CONVO]: New flag macros.
	* bugs-fixed/README: Updated.
	* bugs-fixed/string-conv.awk, bugs-fixed/string-conv.bad,
	bugs-fixed/string-conv.ok: New files.
	* main.c (version): Updated.
	* proto.h (flags2str): Add declaration.
	* tran.c (setfval): Clear CONVC and CONVO flags and set vp->fmt
	to NULL.