@@ -1,0 +1,6 @@
+120 > 50
+120 <= 50
+same
+120 > 50
+120 <= 50
+same
